Fix css error on Firefox

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,11 @@
 	width: 100%;
 	height: 50%;
 	}
+	
+.embed-responsive-item{
+	height: 300px;
+	width: 100%;
+}
 
 pre, code {
 	text-align: left;
